# you-can-call-me-houdini

./: .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  package.py  pyproject.toml  requirements.txt  test_requirements.txt  tox.ini  you_can_call_me_houdini.json
.github/workflows/: tests.yml
docs/: conf.py  examples.rst  index.rst  installation.rst  requirements.txt
docs/api/: modules.rst  you_can_call_me_houdini.api.rst  you_can_call_me_houdini.rst
docs/houdini/: default_callbacks.rst  event_handlers.rst  index.rst  other.rst  scene_events.rst  startup_scripts.rst
src/houdini/: CMakeLists.txt
src/houdini/python3.10libs/: nodegraphhooks.py
src/houdini/python3.11libs/: nodegraphhooks.py  pythonrc.py  ready.py
src/houdini/python3.9libs/: nodegraphhooks.py  pythonrc.py  uiready.py
src/houdini/pythonX.Ylibs/: nodegraphhooks.py
src/houdini/scripts/: 123.py  456.py  OnCreated.py  OnInstall.py  OnNameChanged.py  OnUninstall.py  _OnDeleted.py  _OnInputChanged.py  _OnLoaded.py  _OnUpdated.py  _PostLastDelete.py  _PreFirstCreate.py  afterscenesave.py  beforescenesave.py  externaldragdrop.py  houdinicore.py
src/python/you_can_call_me_houdini/: callbacks.py  events.py  rop_render.py
tests/: conftest.py  test_callbacks.py  test_events.py  test_rop_render.py
tests/api/: test_callback.py  test_event.py  test_logger.py  test_manager.py  test_metaclasses.py  test_stats.py
tests/data/: test_rop_render.hiplc
tests/houdini/pythonXYlibs/: conftest.py  test_nodegraphhooks.py  test_pythonrc.py  test_ready.py  test_uiready.py
tests/houdini/scripts/: conftest.py  test_123.py  test_456.py  test_OnCreated.py  test_OnDeleted.py  test_OnInputChanged.py  test_OnInstall.py  test_OnLoaded.py  test_OnNameChanged.py  test_OnUninstall.py  test_OnUpdated.py  test_PostLastDelete.py  test_PreFirstCreate.py  test_afterscenesave.py  test_beforescenesave.py  (+2 more)
(+10 files in other folders)
